--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Viewport sin zoom -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Administrador — Royal Crumbs</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
 </head>
 
-<body>
+<body oncontextmenu="return false;" ondragstart="return false;" onselectstart="return false;">
     <div class="rc-container">
 
         <!-- ENCABEZADO -->
@@ -50,6 +51,7 @@
             </div>
         </section>
     </div>
+    <script src="{{ url_for('static', filename='js/security.js') }}"></script>
 </body>
 
 </html>
